First enemy, pathfinding, game state, fix Createfrom method in PathToPlayer class

--- a/Dungeon Crawler/Dungeon Crawler.csproj
+++ b/Dungeon Crawler/Dungeon Crawler.csproj
@@ -41,7 +41,10 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="AggresiveEnemy.cs" />
+    <Compile Include="Global.cs" />
     <Compile Include="InputState.cs" />
+    <Compile Include="PathToPlayer.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="Program.cs" />
