Fixed some magic values, added camera

--- a/Dungeon Crawler/Dungeon Crawler.csproj
+++ b/Dungeon Crawler/Dungeon Crawler.csproj
@@ -42,8 +42,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="AggresiveEnemy.cs" />
+    <Compile Include="Camera.cs" />
     <Compile Include="Global.cs" />
     <Compile Include="InputState.cs" />
+    <Compile Include="LayerDepth.cs" />
     <Compile Include="PathToPlayer.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Main.cs" />
