Added combat system, changed controls (wsad-walking, space-debugmode, leftshift-attack, ,.-camera zoom, improved pathfinding (no more walking into enemies/enemies stack in the same cell)

--- a/Dungeon Crawler/Dungeon Crawler.csproj
+++ b/Dungeon Crawler/Dungeon Crawler.csproj
@@ -43,6 +43,8 @@
   <ItemGroup>
     <Compile Include="AggresiveEnemy.cs" />
     <Compile Include="Camera.cs" />
+    <Compile Include="Character.cs" />
+    <Compile Include="CombatManager.cs" />
     <Compile Include="Global.cs" />
     <Compile Include="InputState.cs" />
     <Compile Include="LayerDepth.cs" />
