--- a/Dungeon Crawler/Dungeon Crawler.csproj
+++ b/Dungeon Crawler/Dungeon Crawler.csproj
@@ -41,17 +41,17 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="AggresiveEnemy.cs" />
-    <Compile Include="Camera.cs" />
-    <Compile Include="Character.cs" />
-    <Compile Include="CombatManager.cs" />
-    <Compile Include="Global.cs" />
-    <Compile Include="GUI.cs" />
-    <Compile Include="InputState.cs" />
-    <Compile Include="LayerDepth.cs" />
-    <Compile Include="PathToPlayer.cs" />
-    <Compile Include="Player.cs" />
-    <Compile Include="Main.cs" />
+    <Compile Include="Classes\AggresiveEnemy.cs" />
+    <Compile Include="Classes\CameraManager.cs" />
+    <Compile Include="Classes\Character.cs" />
+    <Compile Include="Classes\CombatManager.cs" />
+    <Compile Include="Classes\GlobalVariables.cs" />
+    <Compile Include="Classes\GUI.cs" />
+    <Compile Include="Classes\InputManager.cs" />
+    <Compile Include="Classes\Layers.cs" />
+    <Compile Include="Classes\PathToPlayer.cs" />
+    <Compile Include="Classes\Player.cs" />
+    <Compile Include="Classes\Main.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
