--- a/Game1/Game1.csproj
+++ b/Game1/Game1.csproj
@@ -45,9 +45,10 @@
     <Compile Include="AnimationManager.cs" />
     <Compile Include="Collision.cs" />
     <Compile Include="Game1.cs" />
+    <Compile Include="Obstacle.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Sprite.cs" />
+    <Compile Include="Player.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
