Added few randomly running enemies, fixed camera zoom distance

--- a/Dungeon Crawler/Dungeon Crawler.csproj
+++ b/Dungeon Crawler/Dungeon Crawler.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Classes\AnimationManager.cs" />
     <Compile Include="Classes\CameraManager.cs" />
     <Compile Include="Classes\Collision.cs" />
+    <Compile Include="Classes\Enemy.cs" />
     <Compile Include="Classes\Game1.cs" />
     <Compile Include="Classes\Item.cs" />
     <Compile Include="Classes\Obstacle.cs" />
