Added obstacles list in preparation to moving map stuff from game1 to new classes level and levelManager

--- a/Dungeon Crawler/Dungeon Crawler.csproj
+++ b/Dungeon Crawler/Dungeon Crawler.csproj
@@ -48,6 +48,8 @@
     <Compile Include="Classes\Enemy.cs" />
     <Compile Include="Classes\Game1.cs" />
     <Compile Include="Classes\Item.cs" />
+    <Compile Include="Classes\Level.cs" />
+    <Compile Include="Classes\LevelManager.cs" />
     <Compile Include="Classes\Obstacle.cs" />
     <Compile Include="Classes\Player.cs" />
     <Compile Include="Program.cs" />
