Cleanup in classes, Enemies Collisions are working!

--- a/Dungeon Crawler/Dungeon Crawler.csproj
+++ b/Dungeon Crawler/Dungeon Crawler.csproj
@@ -41,20 +41,21 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Classes\Animation.cs" />
-    <Compile Include="Classes\AnimationManager.cs" />
-    <Compile Include="Classes\CameraManager.cs" />
-    <Compile Include="Classes\Collision.cs" />
-    <Compile Include="Classes\Enemy.cs" />
+    <Compile Include="Classes\Characters\Animation.cs" />
+    <Compile Include="Classes\Characters\AnimationManager.cs" />
+    <Compile Include="Classes\Camera\CameraManager.cs" />
+    <Compile Include="Classes\Characters\Character.cs" />
+    <Compile Include="Classes\Utilities\Collision.cs" />
+    <Compile Include="Classes\Characters\Enemy.cs" />
     <Compile Include="Classes\Game1.cs" />
-    <Compile Include="Classes\Global.cs" />
-    <Compile Include="Classes\GUI.cs" />
-    <Compile Include="Classes\Item.cs" />
-    <Compile Include="Classes\Layers.cs" />
-    <Compile Include="Classes\Level.cs" />
-    <Compile Include="Classes\LevelManager.cs" />
-    <Compile Include="Classes\Obstacle.cs" />
-    <Compile Include="Classes\Player.cs" />
+    <Compile Include="Classes\Utilities\Global.cs" />
+    <Compile Include="Classes\Camera\GUI.cs" />
+    <Compile Include="Classes\Map\Item.cs" />
+    <Compile Include="Classes\Utilities\Layers.cs" />
+    <Compile Include="Classes\Map\Level.cs" />
+    <Compile Include="Classes\Map\LevelManager.cs" />
+    <Compile Include="Classes\Map\Obstacle.cs" />
+    <Compile Include="Classes\Characters\Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -74,8 +75,10 @@
   <ItemGroup>
     <MonoGameContentReference Include="Content\Content.mgcb" />
     <None Include="app.manifest" />
+    <None Include="ClassDiagram1.cd" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
