Shader numero uno DONE, when hit characters will have their textures whitened for 0.25s

--- a/Dungeon Crawler/Dungeon Crawler.csproj
+++ b/Dungeon Crawler/Dungeon Crawler.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Classes\Characters\Enemy.cs" />
     <Compile Include="Classes\Game1.cs" />
     <Compile Include="Classes\Utilities\CombatManager.cs" />
+    <Compile Include="Classes\Utilities\Effects.cs" />
     <Compile Include="Classes\Utilities\Global.cs" />
     <Compile Include="Classes\Camera\GUI.cs" />
     <Compile Include="Classes\Map\Item.cs" />
