Prepare for reimplementing Exori attack and derivatives -Add distance parameter for IsEnemyInCellAround method and rename it -Add methods for attack animation setup -Delete unnecessary creationTime from AttackAnimation (gameTime doesn't work like that in Monogame)

--- a/Dungeon Crawler/Dungeon Crawler.csproj
+++ b/Dungeon Crawler/Dungeon Crawler.csproj
@@ -45,9 +45,11 @@
     <Compile Include="Classes\Characters\AnimationManager.cs" />
     <Compile Include="Classes\Camera\CameraManager.cs" />
     <Compile Include="Classes\Characters\AttackAnimation.cs" />
+    <Compile Include="Classes\Characters\Attacks\Exori.cs" />
     <Compile Include="Classes\Characters\Attacks\Interface\IAttack.cs" />
     <Compile Include="Classes\Characters\Attacks\Interface\ICharacterTargetedAttack.cs" />
     <Compile Include="Classes\Characters\Attacks\Interface\IUnTargetedAttack.cs" />
+    <Compile Include="Classes\Characters\Attacks\Fireball.cs" />
     <Compile Include="Classes\Characters\Attacks\PenetratingFireball.cs" />
     <Compile Include="Classes\Characters\Attacks\Pound.cs" />
     <Compile Include="Classes\Characters\Attacks\Interface\IPositionTargetedAttack.cs" />
