Add Annihilation attack (Exori like but higher range and dmg), fix SetAnimationInArea method

--- a/Dungeon Crawler/Dungeon Crawler.csproj
+++ b/Dungeon Crawler/Dungeon Crawler.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Classes\Camera\CameraManager.cs" />
     <Compile Include="Classes\Characters\AttackAnimation.cs" />
     <Compile Include="Classes\Characters\Attacks\BigFireballCanonade.cs" />
+    <Compile Include="Classes\Characters\Attacks\Annihilation.cs" />
     <Compile Include="Classes\Characters\Attacks\Exori.cs" />
     <Compile Include="Classes\Characters\Attacks\BigFireball.cs" />
     <Compile Include="Classes\Characters\Attacks\Interface\IAttack.cs" />
