--- a/Dungeon Crawler/Dungeon Crawler.csproj
+++ b/Dungeon Crawler/Dungeon Crawler.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Classes\Characters\Attacks\BigFireballCanonade.cs" />
     <Compile Include="Classes\Characters\Attacks\Exori.cs" />
     <Compile Include="Classes\Characters\Attacks\BigFireball.cs" />
+    <Compile Include="Classes\Characters\Attacks\Iceball.cs" />
     <Compile Include="Classes\Characters\Attacks\Interface\IAttack.cs" />
     <Compile Include="Classes\Characters\Attacks\Interface\ICharacterTargetedAttack.cs" />
     <Compile Include="Classes\Characters\Attacks\Interface\IUnTargetedAttack.cs" />
