--- a/Dungeon Crawler/Dungeon Crawler.csproj
+++ b/Dungeon Crawler/Dungeon Crawler.csproj
@@ -46,7 +46,7 @@
     <Compile Include="Classes\Camera\CameraManager.cs" />
     <Compile Include="Classes\Characters\AttackAnimation.cs" />
     <Compile Include="Classes\Characters\Attacks\Annihilation.cs" />
-    <Compile Include="Classes\Characters\Attacks\BigFireballCanonade.cs" />
+    <Compile Include="Classes\Characters\Attacks\Boss\BigFireballCanonade.cs" />
     <Compile Include="Classes\Characters\Attacks\Exori.cs" />
     <Compile Include="Classes\Characters\Attacks\BigFireball.cs" />
     <Compile Include="Classes\Characters\Attacks\Iceball.cs" />
@@ -111,7 +111,11 @@
     <None Include="ClassDiagram1.cd" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Classes\Characters\Attacks\Mage\" />
+    <Folder Include="Classes\Characters\Attacks\Ranger\" />
+    <Folder Include="Classes\Characters\Attacks\Warrior\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
