--- a/Dungeon Crawler/Dungeon Crawler.csproj
+++ b/Dungeon Crawler/Dungeon Crawler.csproj
@@ -60,6 +60,9 @@
     <Compile Include="Classes\Characters\Attacks\Interface\IPositionTargetedAttack.cs" />
     <Compile Include="Classes\Characters\Boss.cs" />
     <Compile Include="Classes\Characters\Character.cs" />
+    <Compile Include="Classes\Characters\Items\Abstract\Item.cs" />
+    <Compile Include="Classes\Characters\Items\Abstract\UsableItem.cs" />
+    <Compile Include="Classes\Characters\Items\Wand.cs" />
     <Compile Include="Classes\Map\Projectile.cs" />
     <Compile Include="Classes\Map\Sprite.cs" />
     <Compile Include="Classes\Map\Portal.cs" />
@@ -71,7 +74,7 @@
     <Compile Include="Classes\Utilities\Effects.cs" />
     <Compile Include="Classes\Utilities\Global.cs" />
     <Compile Include="Classes\Camera\GUI.cs" />
-    <Compile Include="Classes\Map\Item.cs" />
+    <Compile Include="Classes\Map\ItemSprite.cs" />
     <Compile Include="Classes\Utilities\Layers.cs" />
     <Compile Include="Classes\Map\Level.cs" />
     <Compile Include="Classes\Map\LevelManager.cs" />
