--- a/Dungeon Crawler/Dungeon Crawler.csproj
+++ b/Dungeon Crawler/Dungeon Crawler.csproj
@@ -66,6 +66,9 @@
     <Compile Include="Classes\Characters\Enemies\Blob.cs" />
     <Compile Include="Classes\Characters\Enemies\Skeleton.cs" />
     <Compile Include="Classes\Characters\Enemies\Zombie.cs" />
+    <Compile Include="Classes\Characters\Player Classes\Ranger.cs" />
+    <Compile Include="Classes\Characters\Player Classes\Mage.cs" />
+    <Compile Include="Classes\Characters\Player Classes\Warrior.cs" />
     <Compile Include="Classes\Map\Projectile.cs" />
     <Compile Include="Classes\Map\Sprite.cs" />
     <Compile Include="Classes\Map\Portal.cs" />
