added frost nova spell (mage 2)

--- a/Dungeon Crawler/Dungeon Crawler.csproj
+++ b/Dungeon Crawler/Dungeon Crawler.csproj
@@ -42,6 +42,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Classes\Attacks\Dragon\DragonAttack.cs" />
+    <Compile Include="Classes\Attacks\Mage\FrostNova.cs" />
     <Compile Include="Classes\Attacks\Mage\EnergyBeam.cs" />
     <Compile Include="Classes\Attacks\Ranger\PiercingArrow.cs" />
     <Compile Include="Classes\Attacks\Warrior\Leap.cs" />
