frost trap is working fine

--- a/Dungeon Crawler/Dungeon Crawler.csproj
+++ b/Dungeon Crawler/Dungeon Crawler.csproj
@@ -54,7 +54,7 @@
     <Compile Include="Classes\Attacks\Annihilation.cs" />
     <Compile Include="Classes\Attacks\DemonOak\BigFireballCanonade.cs" />
     <Compile Include="Classes\Attacks\Exori.cs" />
-    <Compile Include="Classes\Attacks\BigFireball.cs" />
+    <Compile Include="Classes\Attacks\Ranger\TrapSkill.cs" />
     <Compile Include="Classes\Attacks\Ranger\ShootArrow.cs" />
     <Compile Include="Classes\Attacks\Iceball.cs" />
     <Compile Include="Classes\Attacks\Interface\IAttack.cs" />
@@ -79,6 +79,7 @@
     <Compile Include="Classes\Characters\Player Classes\Mage.cs" />
     <Compile Include="Classes\Characters\Player Classes\Warrior.cs" />
     <Compile Include="Classes\Map\PiercingProjectille.cs" />
+    <Compile Include="Classes\Map\Trap.cs" />
     <Compile Include="Classes\Map\Projectile.cs" />
     <Compile Include="Classes\Map\Sprite.cs" />
     <Compile Include="Classes\Map\Portal.cs" />
