--- a/Dungeon Crawler/Dungeon Crawler.csproj
+++ b/Dungeon Crawler/Dungeon Crawler.csproj
@@ -42,6 +42,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Classes\Attacks\Dragon\DragonAttack.cs" />
+    <Compile Include="Classes\Attacks\Mage\UltimateExplosion.cs" />
+    <Compile Include="Classes\Attacks\Ranger\MultiShot2.cs" />
+    <Compile Include="Classes\Attacks\Ranger\MultiShot.cs" />
     <Compile Include="Classes\Attacks\Mage\FrostNova.cs" />
     <Compile Include="Classes\Attacks\Mage\EnergyBeam.cs" />
     <Compile Include="Classes\Attacks\Ranger\PiercingArrow.cs" />
@@ -51,7 +54,7 @@
     <Compile Include="Classes\Characters\AnimationManager.cs" />
     <Compile Include="Classes\Camera\CameraManager.cs" />
     <Compile Include="Classes\Characters\AttackAnimation.cs" />
-    <Compile Include="Classes\Attacks\Annihilation.cs" />
+    <Compile Include="Classes\Attacks\Warrior\Annihilation.cs" />
     <Compile Include="Classes\Attacks\DemonOak\BigFireballCanonade.cs" />
     <Compile Include="Classes\Attacks\Exori.cs" />
     <Compile Include="Classes\Attacks\Ranger\TrapSkill.cs" />
