--- a/Dungeon Crawler/Dungeon Crawler.csproj
+++ b/Dungeon Crawler/Dungeon Crawler.csproj
@@ -75,7 +75,9 @@
     <Compile Include="Classes\Characters\Character.cs" />
     <Compile Include="Classes\Characters\Items\Abstract\Item.cs" />
     <Compile Include="Classes\Characters\Items\Abstract\UsableItem.cs" />
-    <Compile Include="Classes\Characters\Items\SmallPotion.cs" />
+    <Compile Include="Classes\Characters\Items\InvisibilityPotion.cs" />
+    <Compile Include="Classes\Characters\Items\SmallHealthPotion.cs" />
+    <Compile Include="Classes\Characters\Items\HealthIcreasingPotion.cs" />
     <Compile Include="Classes\Characters\Items\Wand.cs" />
     <Compile Include="Classes\Characters\Enemies\Blob.cs" />
     <Compile Include="Classes\Characters\Enemies\Skeleton.cs" />
