--- a/Dungeon Crawler/Dungeon Crawler.csproj
+++ b/Dungeon Crawler/Dungeon Crawler.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Classes\Characters\Items\InvisibilityPotion.cs" />
     <Compile Include="Classes\Characters\Items\SmallHealthPotion.cs" />
     <Compile Include="Classes\Characters\Items\HealthIcreasingPotion.cs" />
+    <Compile Include="Classes\Characters\Items\Trainers.cs" />
     <Compile Include="Classes\Characters\Items\Wand.cs" />
     <Compile Include="Classes\Characters\Enemies\Blob.cs" />
     <Compile Include="Classes\Characters\Enemies\Skeleton.cs" />
