Set abstract class and interfaces together to workaround inability of inheriting multiple abstract classes -Previously there were such classes: Item, UpdatableItem, UsableItem. I couldn't create UsableUpdatableItem class because it required to inherit two abstract classes which is forbidden. -Now, there is a single abstract class "Item" and additional functionalities are provided by implementing interfaces.

--- a/Dungeon Crawler/Dungeon Crawler.csproj
+++ b/Dungeon Crawler/Dungeon Crawler.csproj
@@ -78,9 +78,14 @@
     <Compile Include="Classes\Characters\Bosses\DemonOak.cs" />
     <Compile Include="Classes\Characters\Character.cs" />
     <Compile Include="Classes\Characters\Items\Abstract\Item.cs" />
-    <Compile Include="Classes\Characters\Items\Abstract\UpdatableItem.cs" />
-    <Compile Include="Classes\Characters\Items\Abstract\UsableItem.cs" />
+    <Compile Include="Classes\Characters\Items\Abstract\__UpdatableItem.cs" />
+    <Compile Include="Classes\Characters\Items\Abstract\__UsableItem.cs" />
     <Compile Include="Classes\Characters\Items\DokerCharm.cs" />
+    <Compile Include="Classes\Characters\Items\FullHPPotion.cs" />
+    <Compile Include="Classes\Characters\Items\Interface\IItem.cs" />
+    <Compile Include="Classes\Characters\Items\Interface\IUpdatableItem.cs" />
+    <Compile Include="Classes\Characters\Items\Interface\IUsableItem.cs" />
+    <Compile Include="Classes\Characters\Items\Interface\IUsableUpdatableItem.cs" />
     <Compile Include="Classes\Characters\Items\InvisibilityPotion.cs" />
     <Compile Include="Classes\Characters\Items\Shield2.cs" />
     <Compile Include="Classes\Characters\Items\SmallResourcePotion.cs" />
