--- a/Dungeon Crawler/Dungeon Crawler.csproj
+++ b/Dungeon Crawler/Dungeon Crawler.csproj
@@ -100,6 +100,7 @@
     <Compile Include="Classes\Characters\Player Classes\Mage.cs" />
     <Compile Include="Classes\Characters\Player Classes\Warrior.cs" />
     <Compile Include="Classes\Characters\RangedEnemies\Spider.cs" />
+    <Compile Include="Classes\Controls\Checkbox.cs" />
     <Compile Include="Classes\Controls\Button.cs" />
     <Compile Include="Classes\Map\LichProjectille.cs" />
     <Compile Include="Classes\Map\RotatingPiercingProjectille.cs" />
