--- a/Dungeon Crawler/Dungeon Crawler.csproj
+++ b/Dungeon Crawler/Dungeon Crawler.csproj
@@ -108,6 +108,7 @@
     <Compile Include="Classes\Characters\Player Classes\Mage.cs" />
     <Compile Include="Classes\Characters\Player Classes\Warrior.cs" />
     <Compile Include="Classes\Characters\RangedEnemies\Spider.cs" />
+    <Compile Include="Classes\Controls\Inputbox.cs" />
     <Compile Include="Classes\Controls\Label.cs" />
     <Compile Include="Classes\Controls\Checkbox.cs" />
     <Compile Include="Classes\Controls\Button.cs" />
