Add ability to use attacks bound to items. Add Ice Cube

--- a/Dungeon Crawler/Dungeon Crawler.csproj
+++ b/Dungeon Crawler/Dungeon Crawler.csproj
@@ -85,6 +85,7 @@
     <Compile Include="Classes\Characters\Items\DokerCharm.cs" />
     <Compile Include="Classes\Characters\Items\BitterPowder.cs" />
     <Compile Include="Classes\Characters\Items\FullHealthPotion.cs" />
+    <Compile Include="Classes\Characters\Items\IceCube.cs" />
     <Compile Include="Classes\Characters\Items\Interface\IItem.cs" />
     <Compile Include="Classes\Characters\Items\Interface\IUpdatableItem.cs" />
     <Compile Include="Classes\Characters\Items\Interface\IUsableItem.cs" />
