--- a/Dungeon Crawler/Dungeon Crawler.csproj
+++ b/Dungeon Crawler/Dungeon Crawler.csproj
@@ -120,7 +120,8 @@
     <Compile Include="Classes\Map\Projectile.cs" />
     <Compile Include="Classes\Map\Sprite.cs" />
     <Compile Include="Classes\Map\Portal.cs" />
-    <Compile Include="Classes\Menu\IMenuScreen.cs" />
+    <Compile Include="Classes\Menu\Art.cs" />
+    <Compile Include="Classes\Menu\IMenuScreenBuilder.cs" />
     <Compile Include="Classes\Menu\MenuScreen.cs" />
     <Compile Include="Classes\Menu\MenuScreenBuilder.cs" />
     <Compile Include="Classes\Utilities\StatsAllocationSystem.cs" />
